@@ -52,6 +52,10 @@
      Add -y option to force logging via syslog rather than stderr.
      Useful for daemonised ssh connection (ssh -f). Patch originally from
      and ok'd by markus@
+   - djm@cvs.openbsd.org 2008/10/09 03:50:54
+     [servconf.c sshd_config.5]
+     support setting PermitEmptyPasswords in a Match block
+     requested in PR3891; ok dtucker@
 
 20080906
  - (dtucker) [config.guess config.sub] Update to latest versions from
@@ -4786,4 +4790,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5110 2008/11/03 08:22:37 djm Exp $
+$Id: ChangeLog,v 1.5111 2008/11/03 08:23:10 djm Exp $
